# bftp_app

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: .gitignore  51eaa958-556d-45dd-beb0-f8ea68d4ef73_1.part  Cargo.toml  tauri.conf.json
src-tauri/file_segregation_backend/: .gitignore  Cargo.toml
src-tauri/file_segregation_backend/src/: decode.rs  encode.rs  lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: main.css
src/components/: MyDialog.vue  dragAndDrop.vue  dragAndDropItem.vue  dragAndDropMeta.vue  inputRange.vue  loadWindow.vue  mySelect.vue  navBar.vue  progressBar.vue  settingsFile.vue  splitFile.vue  twoButtons.vue  wrapFlex.vue
src/mixins/: ButtonsMix.js  dAndDMix.js  eventsMix.js  mixinDragAndDrop.js
src/pages/: breakFile.vue  joinFile.vue
src/router/: index.js
