[package]
name = "FileSeparation"
version = "0.1.0"
authors = ["Rev1le rev1le@vivaldi.net"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rev1le/bftp_app"
edition = "2021"
readme = "README.md"

[workspace]
members = [
	"file_segregation_backend"
]

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
raw-window-handle = "0.5"
big_file_to_parts = {path = "../src-tauri/big_file_to_parts"}
serde_json = "1.0"
windows-sys = {features = ["Win32_Graphics_Dwm", "Win32", "Win32_UI", "Win32_Graphics", "Win32_UI_Controls"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "fs-all", "global-shortcut", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
