[package]
name = "file_segregation_backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"
authors = ["Rev1le rev1le@vivaldi.net"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
tauri = { version = "1.2" }
uuid = { version = "1.3.0", features= ["v4"] }
md5 = { version = "0.7.0" }
serde = { version = "1.0.158", deatures = ["serde-derive"] }